remove producers code